--- a/golfers/styles/base/_base.scss
+++ b/golfers/styles/base/_base.scss
@@ -1,9 +1,21 @@
-html,
-body {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%; // 10 px
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.7;
+  font-weight: 400;
+  box-sizing: border-box;
 }
 
 a {
@@ -11,6 +23,7 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.container {
+  display: grid;
+  grid-template-rows: 5vh 1fr;
 }
