--- a/golfers/styles/layout/_header.scss
+++ b/golfers/styles/layout/_header.scss
@@ -2,10 +2,15 @@
   display: grid;
   grid-template-columns: 1fr repeat(5, minmax(min-content, max-content));
   grid-template-rows: 1fr;
-
+  border-bottom: 1px solid rgba($color-white, 0.5);
   padding: 0 2rem;
   color: white;
-  background-image: linear-gradient(#189de4, #52b7e9);
+  //background-image: linear-gradient(#189de4, #52b7e9);
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary,
+    $color-primary-dark 0.7
+  );
 
   &__logo {
     display: grid;
