--- a/golfers/styles/pages/_home.scss
+++ b/golfers/styles/pages/_home.scss
@@ -6,45 +6,196 @@
       [col-start] minmax(min-content, 200px) [col-end]
     )
     [center-end] 1fr [full-end];
+  grid-template-rows: 50vh repeat(2, max-content);
 
-  &__hero {
-    position: relative;
-    // display: grid;
-    // grid-template-columns: repeat(6, 1fr);
-    // grid-template-rows: repeat(6, 1fr);
-    grid-column: full-start / full-end;
-    background-image: linear-gradient(to right bottom, #189de4, #52b7e9);
+  row-gap: 5rem;
 
-    height: 50vh;
+  @media screen and (max-width: 800px){
+    row-gap: 0;
+  }
+}
+
+.hero {
+  grid-column: full-start / full-end;
+  background-image: linear-gradient(to right bottom, #3d3f3e, #a3a3a3);
+
+  display: grid;
+  grid-template-columns: repeat(8, minmax(min-content, 1fr));
+  grid-template-rows: 50vh;
+  height: 50vh;
+  width: 100%;
+
+  &__img {
+    grid-column: 1 / 9;
+    grid-row: 1 / 2;
     width: 100%;
-    &-img {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      object-fit: cover;
-      opacity: 0.5;
-      // background-image: linear-gradient(
-      //   to right bottom,
-      //   rgba(126, 213, 111, 0.8),
-      //   rgba(40, 180, 133, 0.8)
-      // );
-      filter: drop-shadow(8px 8px 10px gray);
+    height: 100%;
+    background-size: cover;
+    object-fit: cover;
+    opacity: 0.5;
+    filter: drop-shadow(8px 8px 10px gray);
+  }
+
+  &__caption {
+    color: white;
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+
+    color: whitesmoke;
+
+    align-self: center;
+    z-index: 1;
+
+    & h1 {
+      font-weight: 400;
+      font-size: 6rem;
     }
 
-    &-caption {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    & h4 {
+      font-size: 2rem;
+    }
+  }
+}
+
+.news {
+  grid-column: full-start / full-end;
+  padding: 2rem;
+  padding-bottom: 6rem;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 70rem));
+  gap: 3rem;
+  justify-content: center;
+
+  width: 100%;
+  height: auto;
+
+  @media screen and (max-width: 93.75em ){
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 100rem));
+  }
+
+  &__text {
+    display: grid;
+    grid-template-columns: minmax(10rem, 1fr);
+    grid-template-rows: minmax(min-content, 15rem);
+    gap: 2rem;
+
+    padding: 2rem 3rem;
+    justify-content: center;
+    align-items: center;
+
+    & h1 {
+      font-size: 3rem;
+      font-weight: 400;
+    }
+
+    & p {
+      font-size: $default-font-size;
+      align-self: baseline;
+    }
+
+    & a {
+      margin-right: auto;
+      font-size: 1.5rem;
+      border-bottom: 1px solid black;
+      background-image: linear-gradient(to left bottom, #000000, #313131 0.7);
+      border-radius: 0.5rem;
+      padding: 1rem;
       color: white;
-
-      & h1 {
-        font-size: 6rem;
-      }
-      & h4 {
-        font-size: 3rem;
-      }
+      align-self: center;
     }
+  }
+
+  &__images {
+    display: grid;
+    grid-template-columns: repeat(10, minmax(min-content, 1fr));
+    grid-template-rows: repeat(7, minmax(min-content, 15px));
+    width: 100%;
+    max-width: 70rem;
+    justify-self: center;
+
+    justify-content: center;
+    align-content: center;
+
+    &:hover .news__img:not(:hover) {
+      transform: scale(0.95);
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    object-fit: cover;
+
+    box-shadow: 0 2rem 4rem black;
+    cursor: pointer;
+    transition: all 0.2s;
+    border-radius: 5px;
+
+    &:hover {
+      transform: scale(1.15);
+      z-index: 10;
+    }
+
+    &--1 {
+      grid-column: 2 / 7;
+      grid-row: 1 / 5;
+    }
+    &--2 {
+      grid-column: 5 / 10;
+      grid-row: 2 / 6;
+    }
+    &--3 {
+      grid-column: 3 / 8;
+      grid-row: 4 / 8;
+    }
+  }
+}
+
+.join {
+  background-image: linear-gradient(to left bottom, #000000, #313131 0.7);
+  grid-column: full-start / full-end;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 40rem));
+  justify-content: center;
+  column-gap: 3rem;
+  color: white;
+  height: 40rem;
+
+  &__text {
+    width: 100%;
+    height: 80%;
+    align-self: center;
+    justify-self: center;
+
+    display: grid;
+    align-content:center;
+    justify-items: center;
+
+    & h1 {
+      width: 100%;
+      font-size: 4rem;
+      line-height: 1.2;
+      font-weight: 500;
+      text-align: center;
+    }
+    & h2 {
+      font-size: 3rem;
+      font-weight: 300;
+      margin-top: 2rem;
+    }
+  }
+
+  &__btn {
+    height: 6rem;
+    width: 15rem;
+    align-self: center;
+    justify-self: center;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    cursor: pointer;
   }
 }
