--- a/golfers/styles/pages/_home.scss
+++ b/golfers/styles/pages/_home.scss
@@ -6,11 +6,11 @@
       [col-start] minmax(min-content, 200px) [col-end]
     )
     [center-end] 1fr [full-end];
-  grid-template-rows: 50vh repeat(2, max-content);
+  grid-template-rows: 50vh repeat(3, minmax(50rem, max-content));
 
-  row-gap: 5rem;
+  //row-gap: 5rem;
 
-  @media screen and (max-width: 800px){
+  @media screen and (max-width: 800px) {
     row-gap: 0;
   }
 }
@@ -22,7 +22,8 @@
   display: grid;
   grid-template-columns: repeat(8, minmax(min-content, 1fr));
   grid-template-rows: 50vh;
-  height: 50vh;
+  height: 100%;
+  max-height: 50vh;
   width: 100%;
 
   &__img {
@@ -57,102 +58,6 @@
   }
 }
 
-.news {
-  grid-column: full-start / full-end;
-  padding: 2rem;
-  padding-bottom: 6rem;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min-content, 70rem));
-  gap: 3rem;
-  justify-content: center;
-
-  width: 100%;
-  height: auto;
-
-  @media screen and (max-width: 93.75em ){
-    grid-template-columns: repeat(auto-fit, minmax(min-content, 100rem));
-  }
-
-  &__text {
-    display: grid;
-    grid-template-columns: minmax(10rem, 1fr);
-    grid-template-rows: minmax(min-content, 15rem);
-    gap: 2rem;
-
-    padding: 2rem 3rem;
-    justify-content: center;
-    align-items: center;
-
-    & h1 {
-      font-size: 3rem;
-      font-weight: 400;
-    }
-
-    & p {
-      font-size: $default-font-size;
-      align-self: baseline;
-    }
-
-    & a {
-      margin-right: auto;
-      font-size: 1.5rem;
-      border-bottom: 1px solid black;
-      background-image: linear-gradient(to left bottom, #000000, #313131 0.7);
-      border-radius: 0.5rem;
-      padding: 1rem;
-      color: white;
-      align-self: center;
-    }
-  }
-
-  &__images {
-    display: grid;
-    grid-template-columns: repeat(10, minmax(min-content, 1fr));
-    grid-template-rows: repeat(7, minmax(min-content, 15px));
-    width: 100%;
-    max-width: 70rem;
-    justify-self: center;
-
-    justify-content: center;
-    align-content: center;
-
-    &:hover .news__img:not(:hover) {
-      transform: scale(0.95);
-    }
-  }
-
-  &__img {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    object-fit: cover;
-
-    box-shadow: 0 2rem 4rem black;
-    cursor: pointer;
-    transition: all 0.2s;
-    border-radius: 5px;
-
-    &:hover {
-      transform: scale(1.15);
-      z-index: 10;
-    }
-
-    &--1 {
-      grid-column: 2 / 7;
-      grid-row: 1 / 5;
-    }
-    &--2 {
-      grid-column: 5 / 10;
-      grid-row: 2 / 6;
-    }
-    &--3 {
-      grid-column: 3 / 8;
-      grid-row: 4 / 8;
-    }
-  }
-}
-
 .join {
   background-image: linear-gradient(to left bottom, #000000, #313131 0.7);
   grid-column: full-start / full-end;
@@ -162,7 +67,7 @@
   justify-content: center;
   column-gap: 3rem;
   color: white;
-  height: 40rem;
+  height: 100%;
 
   &__text {
     width: 100%;
@@ -171,7 +76,7 @@
     justify-self: center;
 
     display: grid;
-    align-content:center;
+    align-content: center;
     justify-items: center;
 
     & h1 {
