--- a/golfers/styles/base/_base.scss
+++ b/golfers/styles/base/_base.scss
@@ -9,8 +9,11 @@
 html {
   font-size: 62.5%; // 10 px
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1000px) {
     font-size: 50%;
+  }
+  @media screen and (max-width: 700px) {
+    font-size: 40%;
   }
 }
 
