Added some responsiveness to header and hero pic

--- a/golfers/styles/layout/_header.scss
+++ b/golfers/styles/layout/_header.scss
@@ -80,6 +80,10 @@
       -webkit-animation: scale-up-tr 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
         both;
       animation: scale-up-tr 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+
+      @media screen and (max-width: 50em) and (max-height: 66em) {
+        top: 45px;
+      }
     }
 
     svg {
