--- a/golfers/styles/pages/_home.scss
+++ b/golfers/styles/pages/_home.scss
@@ -6,7 +6,10 @@
       [col-start] minmax(min-content, 200px) [col-end]
     )
     [center-end] 1fr [full-end];
-  grid-template-rows: 50vh repeat(3, minmax(50rem, max-content));
+  // grid-template-rows: minmax(30vh, max-content) repeat(
+  //     3,
+  //     minmax(50rem, max-content)
+  //   );
 
   //row-gap: 5rem;
 
@@ -25,6 +28,14 @@
   height: 100%;
   max-height: 50vh;
   width: 100%;
+  overflow: hidden;
+  @media screen and (max-width: 900px) {
+    grid-template-rows: 40vh;
+  }
+
+  @media screen and (max-width: 500px) {
+    grid-template-rows: 30vh;
+  }
 
   &__img {
     grid-column: 1 / 9;
