--- a/golfers/styles/main.scss
+++ b/golfers/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'components/guestbookform';
 @import 'components/fullscreenComponents/twoColTextImg';
 @import 'components/fullscreenComponents/threeColBox';
+@import 'components/heroimg';
 
 //Cards
 @import 'components/cards/ClubCard';
