--- a/golfers/styles/layout/_header.scss
+++ b/golfers/styles/layout/_header.scss
@@ -35,12 +35,12 @@
     &-item {
       cursor: pointer;
 
-      &--white {
-        background-color: white;
+      &--green {
+        background-color: $color-green-1;
         color: black;
         width: 8rem;
         text-align: center;
-        
+        border-radius: 10px;
       }
     }
   }
