Added better responsiveness for clubs component

--- a/golfers/styles/abstract/_variables.scss
+++ b/golfers/styles/abstract/_variables.scss
@@ -6,9 +6,10 @@ $color-white: #fff;
 $color-black: #000;
 
 $color-green-1: #20e3b2;
+$color-green-2: #0cebeb;
 $green-background: linear-gradient(
   to bottom right,
-  rgb(12, 235, 235) 0%,
+  #0cebeb 0%,
   rgb(32, 227, 178) 100%
 );
 
