--- a/golfers/styles/components/_heroimg.scss
+++ b/golfers/styles/components/_heroimg.scss
@@ -9,6 +9,7 @@
   max-height: 50vh;
   width: 100%;
   overflow: hidden;
+  box-shadow: 0px 5px 15px black;
   @media screen and (max-width: 900px) {
     grid-template-rows: 40vh;
   }
