--- a/golfers/styles/components/cards/_ClubCard.scss
+++ b/golfers/styles/components/cards/_ClubCard.scss
@@ -8,7 +8,18 @@
   position: relative;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  box-shadow: 0px 0px 15px 2px black;
   cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    transform: translateY(-1rem) scale(1.05);
+  }
+
+  @media screen and (max-width: 600px) {
+    height: 20rem;
+    margin-bottom: 4rem;
+  }
 
   &__picture {
     height: 100%;
@@ -18,8 +29,6 @@
       height: 100%;
       width: 100%;
       background-blend-mode: overlay;
-      // -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-      // clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
       background-image: linear-gradient(
@@ -59,9 +68,5 @@
     font-size: $default-font-size;
     margin-top: 0.5rem;
     padding: 2rem;
-  }
-
-  &:hover {
-    transform: scale(1.3s);
   }
 }
