--- a/golfers/styles/components/_button.scss
+++ b/golfers/styles/components/_button.scss
@@ -44,6 +44,14 @@
       background-color: $color-white;
     }
   }
+  &--green {
+    background-color: $color-green-1;
+    color: $color-black;
+
+    &::after {
+      background-color: $color-green-1;
+    }
+  }
 
   &--black {
     background-color: $color-primary;
