--- a/golfers/styles/base/_base.scss
+++ b/golfers/styles/base/_base.scss
@@ -29,5 +29,15 @@ a {
 
 .container {
   display: grid;
-  grid-template-rows: minmax(5rem, 5vh) 1fr;
+  height: 100vh;
+  grid-template-rows: 6rem 1fr;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+}
+
+.main {
+  height: 100%;
 }
