--- a/golfers/styles/components/guestbook/_guestbookchat.scss
+++ b/golfers/styles/components/guestbook/_guestbookchat.scss
@@ -6,6 +6,12 @@
   box-shadow: 1rem 1rem 2rem rgba(134, 111, 111, 0.699);
   width: 80%;
   max-width: 80rem;
+  max-height: 80%;
+  overflow: hidden scroll;
+
+  @media screen and (max-width: 1250px) {
+    max-height: 100%;
+  }
 }
 
 .message {
