--- a/golfers/styles/main.scss
+++ b/golfers/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'components/heroimg';
 @import 'components/modals/modalCard';
 @import 'components/imageLoader';
+@import 'components/sidebar/sidebar';
 
 // Form
 @import 'components/form/form';
@@ -42,3 +43,4 @@
 @import 'pages/guestbook';
 @import 'pages/login';
 @import 'pages/register';
+@import 'pages/myProfile';
